# scg-core

./: CMakeLists.txt  LICENSE  README.md
doc/: CRTP.md
include/scg/geometry/: Point2.hpp  Segment2.hpp
include/scg/linear/: MatrixNN.hpp  Vector2.hpp  Vector3.hpp  VectorBase.hpp  VectorN.hpp
script/: build.sh  test.sh
test/: CMakeLists.txt
test/geometry/: Point2Test.cpp  Segment2Test.cpp
test/linear/: MatrixNNTest.cpp  Vector2Test.cpp  Vector3Test.cpp  VectorNTest.cpp
